--- a/album_select_demo/app/src/main/AndroidManifest.xml
+++ b/album_select_demo/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.znh.selectalbum">
 
     <application
-        android:name="com.znh.selectalbum.application.ProjiectApplication"
+        android:name="com.znh.selectalbum.application.ProjectApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
