--- a/album_select_demo/app/src/main/AndroidManifest.xml
+++ b/album_select_demo/app/src/main/AndroidManifest.xml
@@ -19,9 +19,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name="com.znh.selectalbum.activity.SelectImageActivity" />
         <activity android:name="com.znh.selectalbum.activity.PreviewImaeActivity" />
         <activity android:name="com.znh.selectalbum.activity.AlbumActivity" />
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.znh.selectalbum.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_file_paths" />
+        </provider>
     </application>
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
