--- a/gradle80-plugin-demo/app/src/main/AndroidManifest.xml
+++ b/gradle80-plugin-demo/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SecondActivity" />
+        <activity android:name=".FirstActivity" />
     </application>
 
 </manifest>
